@@ -20,6 +20,8 @@ ChangeLog
 =========
     
 2010???? - 1.27.93
+
+[-] * Fix crash when SMS in Nokia has too many recipients (bug #1136).
     
 20100217 - 1.27.92
 
